<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentFormActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corner"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label_input_id"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/inputId"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="100"
                android:contentDescription="@string/hint_input_id"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label_input_name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="Example"
                android:contentDescription="@string/hint_input_name"
                android:ems="20"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="createStudent"
                android:text="@string/button_add" />


        </LinearLayout>


    </FrameLayout>

</LinearLayout>